--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   color: #202124;
   font-size: 15px;
   margin: 0;
@@ -46,7 +46,7 @@ main {
 
 #form-container {
   border-radius: 8px;
-  border: 0.5px solid #d3d3d3;
+  border: 0.5px solid #ffffff;
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
     0 2px 6px 2px rgba(60, 64, 67, 0.149);
   margin: 32px auto 16px auto;
@@ -174,11 +174,10 @@ input:focus {
   text-align: right;
 }
 
-#submit-button,
-#form-close-button {
+#submit-button {
   margin: 0.2em 8px;
   box-sizing: border-box;
-  color: rgba(0, 0, 0, 0.87);
+  color: rgb(16, 0, 94);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -190,20 +189,41 @@ input:focus {
   padding: 8px 24px;
   border-radius: 4px;
   border-color: transparent !important;
-  background-color: rgba(219, 219, 219, 0.457);
+  background-color: rgba(219, 219, 219, 0);
+}
+
+#form-close-button {
+  margin: 0.2em 8px;
+  box-sizing: border-box;
+  color: rgb(72, 154, 222);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  letter-spacing: 0.01785714em;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.25rem;
+  height: 36px;
+  padding: 8px 24px;
+  border-radius: 4px;
+  border-color: #aeaeff93 !important;
+  background-color: rgba(146, 150, 252, 0);
+  transition: all 150ms ease;
 }
 
 #submit-button {
-  color: #fff;
-  background-color: #007bf5;
+  color: rgb(0, 129, 234);
+  background-color: #b3d9ff;
   margin-bottom: 10px;
   margin-right: 1px;
+  transition: all 150ms ease;
 }
 
 #submit-button:hover,
 #form-close-button:hover {
-  filter: brightness(95%);
+  filter: brightness(98%);
   cursor: pointer;
+  box-shadow: rgba(0, 0, 255, 0.137) 2px 0px 3px;
 }
 
 .note {
